welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas = 0
while (!estSurBiscuit){
      nbPas = nbPas + 1;
      avance();
      }
prendBiscuit(); 
val x = nbPas
var dejafait = 0     	
for (dejafait <- 1 to x){
	  recule();
	  dejafait = dejafait + 1;
	     
}
poseBiscuit();